--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     padding: 0;
-    background-color: #fff;
+    background-color: #eeee;
 }
 nav{
     display: flex;
@@ -9,9 +9,8 @@ nav{
     align-items: center;
     margin-left: 0;
     margin-right:0;
-    height: 13vh;
-    /* box-shadow: 10px 5px 6px rgb(194, 185, 185); */
-    
+    height: 10vh;
+      
 }
 nav a{
     color: black;
@@ -25,7 +24,35 @@ nav .logo{
     color: #000000;
     
 }
+nav b {
+    display: none;
+}
+nav a:hover i{
+    display:none;
+}
+nav a:hover b{
+    display: block;
+    font: 0.5em sans-serif;
+    font-style: italic;
+}
 
+.content-intro p:nth-child(3){
+ animation: bounce-in 2s ease-in;
+ }
+@keyframes bounce-in{
+    0%{
+        transform:scale(0.1);
+        opacity: 0;
+    }
+    60%{
+        transform: scale(1.2);
+        opacity:1;
+    }
+    100%{
+        transform: scale(1);
+    }
+    
+}
 .container-intro{
     background: url('../Portfolio_Assignment/images/aleks-dorohovich-nJdwUHmaY8A-unsplash.jpg');
     width: 100%;
@@ -34,20 +61,17 @@ nav .logo{
     position: relative;
     height: 85vh;
     background-size: cover;
-        
 } 
 .content-intro p{
     color: black;
     font-family: sans-serif;
     line-height: 1px;
-
 }
 .content-intro p:nth-child(1){
 margin-top: 10em;
 margin-left: 4.5em;
 font-weight: bold;
 font-size: 20px;
-
 }
 .content-intro p:nth-child(2){
     margin-left:3em;
@@ -79,5 +103,260 @@ font-size: 20px;
 }
 button:active{
     transform: scale(1.1);
-} 
- 
+}  
+.about-me{
+    width: 90%;
+    height: 350px;
+    background-color: #fff;
+    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.5);
+    border-radius:20px;
+    display: flex;
+    
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 3em auto auto auto;
+}
+
+article{
+    display: flex;
+    width:80%;
+    justify-content: space-evenly;
+    margin-top:auto;
+}
+
+.profile-img {
+    width:40%;
+    
+}
+.profile-personal{
+    width: 50%;
+    font-family: sans-serif;
+    color: black;
+    text-align: justify;
+}
+.profile-personal p:nth-child(1){
+    font-size:1.5em;
+    font-weight: bold;
+}
+
+.profile-personal p:nth-child(2){
+    font-size:1.2em;
+}
+
+.profile-personal p:nth-child(3){
+    font-size: 1em;
+    color:#1a1616;
+}
+.projects{
+    margin: 3em auto auto auto;
+    width: 90%;
+    font-family: sans-serif;
+    text-align: justify;
+}
+.projects h3{
+    font-size:1.5em;
+    font-weight: bold;
+    color: black;
+    
+}
+.projects p{
+    font-size: 1em;
+    color:#1a1616;
+}
+.projects-offered{
+    width: 90%;
+    height: 350px;
+    display: grid;
+    grid-template-columns:1fr 1fr 1fr;
+    grid-column-gap: 5px;
+    grid-area: ".project-1 .project-2 .project-3";
+    justify-content: space-evenly;
+    align-items: center; 
+    margin: 1em auto auto auto;
+    
+}
+.project-1,
+.project-2,
+.project-3{
+    text-align: center;
+    box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.5);
+    border-radius:20px;
+    background-color: #fff;
+}
+
+.contact-me{
+	width: 100%;
+	height:380px; 
+	margin: auto;
+    background-color: rgba(0, 0, 0,0.7);
+}
+
+.contact-me h1{
+    text-align: center;
+    color:#FFFFFF;
+	font-size:1.5em;
+	font-family: calibri;
+	font-weight:bold;
+    padding-top: 1.5em;
+}
+.contact-me p{
+    text-align: center;
+    font: 1em sans-serif;
+    color: white;
+}
+form{
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    justify-content:space-between;
+}
+    
+#name , #email{
+    width: 200px;
+    height: 30px; 
+    margin-top: 1em;
+    
+}
+#comments{
+    margin-top: 1em;
+    overflow-y: scroll;
+      
+}
+form .btn{
+    width:150px;
+	height:30px;
+	background-color: #FFFFFF;
+	border:none;
+	outline:none;
+	font-size:14px;
+	font-weight:bold;
+    margin-top: 1em;
+}
+
+.social-icons{
+	display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.social-icons a{
+	width:40px;
+	height:40px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color:#e6e3e3;
+	border-radius:50%;
+    margin: 20px 10px;
+    color: black;
+}
+.social-icons a:hover{
+	background-color:black;
+    color: #ffffff;
+	transition:all ease 0.5s;
+}
+.social{
+	position: fixed;
+	top:50%;
+	right:0px;
+	transform:translateY(-50%);
+}
+.social a{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width:50px;
+	height:50px;
+	margin:0px;
+	padding: 0px;
+	line-height:0px;
+    color: black;
+	background-color:#FFFFFF;
+	border:1px solid #CBCBCB;
+	box-shadow:2px 2px 12px rgba(0,0,0,0.2);
+}
+.social i{
+	font-size:20px;
+	color:white;
+}
+.social a:hover{
+    background-color: black;
+	color:#FFFFFF;
+	transition:all ease 0.5s;
+}
+@media only screen and (max-width:800px){
+
+nav {
+    height: 6vh;
+}
+nav a{
+    font-size: 1rem;
+}
+.content-intro p:nth-child(3)
+{
+    font-size: 1rem;
+}
+.about-me{
+    box-shadow: none;
+    background-color:#eee;
+    margin-top: 4em;
+    width: 100%;
+    height: max-content;
+}
+article{
+    flex-direction: row;
+    width: 100%;
+    flex-wrap: wrap;
+}
+.profile-img{
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+.profile-personal{
+    width: 100%;
+}
+.profile-personal p:nth-child(1){
+    font-size:0.8em;
+}
+.profile-personal p:nth-child(2){
+    font-size:1em;
+}
+
+.profile-personal p:nth-child(3){
+    font-size: 0.8em;
+}
+.projects{
+    margin-top: auto;
+    width: 100%;
+}
+.projects h3,
+.projects p{
+    font-size: 0.8em;
+}
+.projects-offered{
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    height: max-content;
+    flex-wrap: wrap;
+}
+
+.contact-me h1{
+    font-size: 1em;
+}
+.contact-me p{
+    font-size: 0.7em;
+}
+#name, #email{
+    width: 100px;
+    height: 20px;
+}
+#comments{
+    overflow: hidden;
+}
+form .btn{
+width:100px;
+font-size: 5px;
+}
+}
+
