--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+
 body{
     margin: 0;
     padding: 0;
@@ -34,6 +36,7 @@ nav a:hover b{
     display: block;
     font: 0.5em sans-serif;
     font-style: italic;
+    text-decoration-line: none;
 }
 
 .content-intro p:nth-child(3){
@@ -64,23 +67,23 @@ nav a:hover b{
 } 
 .content-intro p{
     color: black;
-    font-family: sans-serif;
+   font-family: sans-serif;
     line-height: 1px;
 }
 .content-intro p:nth-child(1){
-margin-top: 10em;
-margin-left: 4.5em;
+margin-top: 8em;
+margin-left: 4em;
 font-weight: bold;
-font-size: 20px;
+font-size: 25px;
 }
 .content-intro p:nth-child(2){
-    margin-left:3em;
-    font-size:30px;
+    margin-left:2.8em;
+    font-size:35px;
     font-weight: bolder;
 }
 .content-intro p:nth-child(3){
-    font-size: 22px;
-    margin-left: 4em;
+    font-size: 25px;
+    margin-left:4em;
 }
 .content-intro{
     position: absolute;
@@ -91,11 +94,11 @@ font-size: 20px;
     content: "";
     background:#505050;
     width: 100%;
-    opacity: 0.8;
-    transition: .5s ease;
+    opacity:0.7;
+    
 }
 .container-intro button{
-    margin-left: 5.5em;
+    margin-left: 6em;
     background-color: black;
     color: white;
     max-width: fit-content;
@@ -111,7 +114,6 @@ button:active{
     box-shadow: 2px 2px 12px rgba(0, 0, 0, 0.5);
     border-radius:20px;
     display: flex;
-    
     justify-content: space-evenly;
     align-items: center;
     margin: 3em auto auto auto;
@@ -119,23 +121,26 @@ button:active{
 
 article{
     display: flex;
-    width:80%;
+    width:90%;
     justify-content: space-evenly;
     margin-top:auto;
 }
 
 .profile-img {
     width:40%;
+    margin-bottom: 1em;
     
 }
 .profile-personal{
     width: 50%;
-    font-family: sans-serif;
+    font-family:sans-serif;
+    
     color: black;
     text-align: justify;
+    
 }
 .profile-personal p:nth-child(1){
-    font-size:1.5em;
+    font-size:1.2em;
     font-weight: bold;
 }
 
@@ -146,29 +151,33 @@ article{
 .profile-personal p:nth-child(3){
     font-size: 1em;
     color:#1a1616;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
 }
 .projects{
     margin: 3em auto auto auto;
     width: 90%;
-    font-family: sans-serif;
+    font-weight: bold;
     text-align: justify;
 }
 .projects h3{
-    font-size:1.5em;
-    font-weight: bold;
+    font-family:sans-serif;
+    font-size:1.2em;
     color: black;
     
 }
 .projects p{
+    font-family:Roboto, 'sans-serif';
     font-size: 1em;
     color:#1a1616;
+    margin:auto 1em;
 }
 .projects-offered{
     width: 90%;
     height: 350px;
     display: grid;
     grid-template-columns:1fr 1fr 1fr;
-    grid-column-gap: 5px;
+    grid-column-gap: 10px;
     grid-area: ".project-1 .project-2 .project-3";
     justify-content: space-evenly;
     align-items: center; 
@@ -183,17 +192,23 @@ article{
     border-radius:20px;
     background-color: #fff;
 }
+.project-1 h4,
+.project-2 h4,
+.project-3 h4{
+   margin-bottom: auto; 
+
+} 
 
 .contact-me{
 	width: 100%;
-	height:380px; 
+	
 	margin: auto;
     background-color: rgba(0, 0, 0,0.7);
 }
 
 .contact-me h1{
     text-align: center;
-    color:#FFFFFF;
+    color:#000;
 	font-size:1.5em;
 	font-family: calibri;
 	font-weight:bold;
@@ -283,6 +298,7 @@ form .btn{
 	color:#FFFFFF;
 	transition:all ease 0.5s;
 }
+/* Responsive Design*/
 @media only screen and (max-width:800px){
 
 nav {
@@ -294,13 +310,17 @@ nav a{
 .content-intro p:nth-child(3)
 {
     font-size: 1rem;
+    padding-left:1.5em;
+}
+.content-intro button{
+    padding-left: 0.5em;
 }
 .about-me{
     box-shadow: none;
     background-color:#eee;
-    margin-top: 4em;
     width: 100%;
     height: max-content;
+    
 }
 article{
     flex-direction: row;
@@ -314,6 +334,9 @@ article{
 }
 .profile-personal{
     width: 100%;
+    padding-left: 1em;
+    padding-right: 1em;
+    
 }
 .profile-personal p:nth-child(1){
     font-size:0.8em;
@@ -324,11 +347,13 @@ article{
 
 .profile-personal p:nth-child(3){
     font-size: 0.8em;
+    
 }
 .projects{
     margin-top: auto;
     width: 100%;
 }
+.projects h3{padding-left: 0.8em;}
 .projects h3,
 .projects p{
     font-size: 0.8em;
@@ -339,24 +364,43 @@ article{
     flex-direction: row;
     height: max-content;
     flex-wrap: wrap;
+    
 }
 
+.project-1,
+.project-2,
+.project-3{
+    margin:0.5em 1em;
+}
+.contact-me{
+    height: 550px;
+}
 .contact-me h1{
     font-size: 1em;
 }
 .contact-me p{
     font-size: 0.7em;
+    margin: auto 0.5em;
 }
+form{
+    display: block;
+    text-align: center;
+    height: max-content;
+}
+
 #name, #email{
     width: 100px;
     height: 20px;
+} 
+
+.social{
+    display: none;
 }
-#comments{
-    overflow: hidden;
-}
+
 form .btn{
 width:100px;
-font-size: 5px;
+font-size: 10px;
+text-align: center;
 }
 }
 
